tests/errors/circular-local.spcasmtest
org 0

global:
.label_1 = .label_2
.label_2 = .label_1

; Make sure the labels need to be resolved
jmp .label_1
